[project]
name = "471c"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "James Clause", email = "clause@udel.edu" }]
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.2"]

[tool.ruff]
line-length = 120

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
L0 = { workspace = true }
L1 = { workspace = true }
L2 = { workspace = true }
L3 = { workspace = true }
util = { workspace = true }
